@@ -12,6 +12,8 @@ Version 1.1, released UNRELEASED
 * Options in `--help` output are now grouped in random senseless ways
   rather than being in one randomly ordered group.
 * Manual page clarification for `--root` and `verify`. Thanks, Saint Germain.
+* Remove outdated section from manual page explaining that there is not
+  format conversion. Thanks, Elrond of Samba-TNG.
 
 Version 1.0, released 2012-06-01
 --------------------------------
